[package]
name = "twilight-bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.tokio]
version = "1"
features = ["full"]

[dependencies.twilight-cache-inmemory]
version = "0.13"
features = ["permission-calculator"]

[dependencies.twilight-util]
version = "0.13"
features = ["builder"]

[dependencies.twilight-http]
version = "0.13"
features = ["rustls-native-roots"]

[dependencies.twilight-gateway]
version = "0.13"
features = ["rustls-native-roots"]

[dependencies]
dotenvy = "0.15.6"
futures = "0.3.25"
tracing = "0.1.37"
twilight-interactions = "0.13.0"
twilight-model = "0.13.7"
tracing-subscriber = "0.3.16"
