[package]
name = "twilight-bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.tokio]
version = "1"
features = ["full"]

[dependencies.twilight-cache-inmemory]
version = "0.15"
features = ["permission-calculator"]

[dependencies.twilight-util]
version = "0.15"
features = ["builder"]

[dependencies.twilight-http]
version = "0.15"
features = ["rustls-webpki-roots"]
default-features = false


[dependencies.twilight-gateway]
version = "0.15"
features = ["rustls-webpki-roots"]
default-features = false

[dependencies]
dotenvy = "0.15.7"
futures = "0.3.28"
tracing = "0.1.37"
twilight-interactions = "0.15.2"
twilight-model = "0.15.2"
tracing-subscriber = "0.3.17"
twilight-mention = "0.15.1"
async-trait = "0.1.71"
