[package]
name = "twilight-bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.tokio]
version = "1.37.0"
features = ["full"]

[dependencies.twilight-cache-inmemory]
version = "0.15.4"
features = ["permission-calculator"]

[dependencies.twilight-util]
version = "0.15.4"
features = ["builder"]

[dependencies.twilight-http]
version = "0.15.4"
features = ["rustls-webpki-roots"]
default-features = false


[dependencies.twilight-gateway]
version = "0.15.4"
features = ["rustls-webpki-roots"]
default-features = false

[dependencies]
dotenvy = "0.15.7"
futures = "0.3.30"
tracing = "0.1.40"
twilight-interactions = "0.15.2"
twilight-model = "0.15.4"
tracing-subscriber = "0.3.18"
twilight-mention = "0.15.3"
async-trait = "0.1.80"
